--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/com.ngovihung.assignment"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.ngovihung.assignment.MainActivity">
+    android:paddingTop="@dimen/activity_vertical_margin">
 
-    <com.github.mikephil.charting.charts.LineChart
-        android:id="@+id/chart"
+    <com.sothree.slidinguppanel.SlidingUpPanelLayout
+        android:id="@+id/activity_main_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:gravity="bottom"
+        app:umanoFadeColor="@color/Translucent"
+        app:umanoInitialState="collapsed"
+        app:umanoOverlay="true"
+        app:umanoPanelHeight="@dimen/main_table_option_height">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/activity_main_chart"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+            </com.github.mikephil.charting.charts.LineChart>
+        </LinearLayout>
 
-    </com.github.mikephil.charting.charts.LineChart>
+
+        <!-- Table option panel -->
+        <FrameLayout
+            android:id="@+id/activity_main_fl_options"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/main_table_option_height"
+            android:background="@color/DarkTranslucent"
+            android:visibility="gone">
+
+        </FrameLayout>
+    </com.sothree.slidinguppanel.SlidingUpPanelLayout>
+
+    <TextView
+        android:id="@+id/activity_main_tv_option"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="option"/>
 </RelativeLayout>
