--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,15 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="CommonTogglePrimaryText" parent="CommonPrimaryText">
+        <item name="android:textColor">@drawable/common_toggle_text</item>
+    </style>
+
+    <style name="CommonPrimaryText">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/Blue</item>
+    </style>
+
     <array name="floor_colors">
         <item>#FF4500</item>
         <item>#BA55D3</item>
