--- a/app/src/main/res/drawable/fade_green.xml
+++ b/app/src/main/res/drawable/fade_green.xml
@@ -3,5 +3,5 @@
     <gradient
         android:angle="90"
         android:startColor="#00ff0000"
-        android:endColor="#FF4500" />
+        android:endColor="#9ACD32" />
 </shape>
