--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,12 +49,14 @@
             android:orientation="horizontal"
             android:layout_weight="1">
             <CheckBox
+                android:id="@+id/checkbox_chart_1"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:checked="true"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Chart1"/>
+                android:text="Chart1" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="wrap_content"
@@ -62,8 +64,10 @@
             android:orientation="horizontal"
             android:layout_weight="1">
             <CheckBox
+                android:id="@+id/checkbox_chart_2"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:checked="true" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -75,8 +79,10 @@
             android:orientation="horizontal"
             android:layout_weight="1">
             <CheckBox
+                android:id="@+id/checkbox_chart_3"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:checked="true"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
