--- a/app/src/main/res/drawable/fade_purple.xml
+++ b/app/src/main/res/drawable/fade_purple.xml
@@ -3,5 +3,5 @@
     <gradient
         android:angle="90"
         android:startColor="#00ff0000"
-        android:endColor="#BA55D3" />
+        android:endColor="@color/chart2Color" />
 </shape>
