--- a/app/src/main/res/layout/fragment_daily.xml
+++ b/app/src/main/res/layout/fragment_daily.xml
@@ -13,28 +13,71 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/chart_name" />
 
-    <SeekBar
-        android:id="@+id/seekBar2"
+    <RelativeLayout
+        android:id="@+id/daily_ll_seekbar2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_margin="8dp"
-        android:layout_toLeftOf="@+id/tvYMax"
-        android:layout_marginRight="5dp"
-        android:max="365"
-        android:paddingBottom="12dp" />
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_alignParentBottom="true">
+        <SeekBar
+            android:id="@+id/seekBar2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:paddingBottom="12dp"
+            android:max="365"
+            android:layout_toRightOf="@+id/daily_tv_seek2_start"
+            android:layout_toLeftOf="@+id/daily_tv_seek2_end"/>
+        <TextView
+            android:id="@+id/daily_tv_seek2_start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:text="Items:"
+            android:gravity="left" />
+        <TextView
+            android:id="@+id/daily_tv_seek2_end"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:text="365"
+            android:gravity="right" />
+    </RelativeLayout>
 
-    <SeekBar
-        android:id="@+id/seekBar1"
+
+    <RelativeLayout
+        android:id="@+id/daily_ll_seekbar1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/seekBar2"
-        android:layout_margin="8dp"
-        android:layout_marginBottom="35dp"
-        android:layout_toLeftOf="@+id/tvXMax"
-        android:layout_marginRight="5dp"
-        android:paddingBottom="12dp" />
+        android:layout_above="@+id/daily_ll_seekbar2"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp">
+        <SeekBar
+            android:id="@+id/seekBar1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:paddingBottom="12dp"
+            android:layout_toRightOf="@+id/daily_tv_seek_start"
+            android:layout_toLeftOf="@+id/daily_tv_seek_end"/>
+        <TextView
+            android:id="@+id/daily_tv_seek_start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:text="Jan 1st"
+            android:gravity="left" />
+        <TextView
+            android:id="@+id/daily_tv_seek_end"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:text="Dec 31st"
+            android:gravity="right" />
+
+    </RelativeLayout>
+
 
     <LinearLayout
         android:id="@+id/chart_name"
@@ -42,7 +85,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:weightSum="3"
-        android:layout_above="@+id/seekBar1">
+        android:layout_above="@+id/daily_ll_seekbar1">
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -52,7 +95,8 @@
                 android:id="@+id/checkbox_chart_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:checked="true"/>
+                android:checked="true"
+                android:buttonTint="@color/chart1Color" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -67,7 +111,8 @@
                 android:id="@+id/checkbox_chart_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:checked="true" />
+                android:checked="true"
+                android:buttonTint="@color/chart2Color"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -82,34 +127,16 @@
                 android:id="@+id/checkbox_chart_3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:checked="true"/>
+                android:checked="true"
+                android:buttonTint="@color/chart3Color"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Chart3"/>
         </LinearLayout>
     </LinearLayout>
-    <TextView
-        android:id="@+id/tvXMax"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/seekBar1"
-        android:layout_alignParentRight="true"
-        android:text="1"
-        android:layout_marginBottom="15dp"
-        android:gravity="right"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <TextView
-        android:id="@+id/tvYMax"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/seekBar2"
-        android:layout_alignParentRight="true"
-        android:text="365"
-        android:layout_marginBottom="15dp"
-        android:layout_marginRight="10dp"
-        android:gravity="right"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+
 
 </RelativeLayout>
